// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ServiceBtn > Snapshots > renders the component with all properties filled in 1`] = `
<div>
  <amelipro-icon-btn-stub
    badge="false"
    bordered="false"
    class="
      d-flex
      service-btn
      text-center
      text-none
    "
    icon="modified-item-icon"
    iconbgcolor="ap-blue-darken-1"
    iconcolor="ap-white"
    iconhoverbgcolor="ap-blue darken-2"
    iconhovercolor="ap-white"
    large="false"
    medium="false"
    ripple="false"
    size="2.5rem"
    small="false"
    uniqueid="modified-unique-id"
    xlarge="false"
  ></amelipro-icon-btn-stub>
  <!-- v-if -->
</div>
`;

exports[`ServiceBtn > Snapshots > renders the component with only required properties filled in 1`] = `
<div>
  <amelipro-icon-btn-stub
    badge="false"
    bordered="false"
    class="
      d-flex
      service-btn
      text-center
      text-none
    "
    icon="required-item-icon"
    iconbgcolor="required-icon-bg-color"
    iconcolor="ap-white"
    iconhoverbgcolor="required-icon-hover-bg-color"
    iconhovercolor="ap-white"
    large="false"
    medium="false"
    ripple="false"
    size="2.5rem"
    small="false"
    xlarge="false"
  ></amelipro-icon-btn-stub>
  <!-- v-if -->
</div>
`;

exports[`ServiceBtn > render correctly 1`] = `
<div>
  <button
    class="
      btn--icon
      d-flex
      elevation-0
      rounded-0
      service-btn
      text-center
      text-none
      v-btn
      v-btn--density-default
      v-btn--elevated
      v-btn--icon
      v-btn--size-default
      v-btn--variant-elevated
      v-theme--light
    "
    id="service-btn-id"
    plain=""
    style="height: auto; width: auto;"
    type="button"
  >
    <span class="v-btn__overlay"></span>
    <span class="v-btn__underlay"></span>
    <!---->
    <span
      class="v-btn__content"
      data-no-activator=""
    >
      <!-- v-if -->
      <span
        class="
          amelipro-icon
          icon-custom
          mr-2
        "
        id="service-btn-id-icon"
      >
        <span
          aria-hidden="true"
          class="
            amelipro-custom-icon
            custom-color
          "
          focusable="false"
          role="img"
          style="color: #FFFFFF; height: 2.5rem; width: 2.5rem;"
        >
          <span>
            <svg
              aria-hidden="true"
              style="enable-background:new 0 0 34 34.1;"
              viewBox="0 0 34 34"
              x="0px"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
              y="0px"
            >
              <path
                class="circle-color"
                d="M17,0L17,0c9.4,0,17,7.7,17,17l0,0c0,9.4-7.6,17-17,17.1l0,0C7.6,34.1,0,26.4,0,17l0,0C0,7.7,7.6,0,17,0z"
              />
              <g class="shape-color">
                <path d="M17.8,6.9c-0.7,0-1.4,0.1-2,0.5c-0.3,0.2-0.6,0.5-0.9,0.8c-0.2,0.3-0.4,0.7-0.5,1.1h4.8l-0.2,0.8h-4.7 c0,0.1,0,0.2,0,0.2c0,0.2,0,0.4,0,0.6h4.5l-0.2,0.8h-4.2c0.1,0.9,0.7,1.6,1.4,2c0.5,0.3,1.1,0.4,1.8,0.4c0.7,0,1.5-0.2,2.1-0.6V15 c-0.6,0.3-1.3,0.4-1.9,0.4c-2.1,0-3.6-0.8-4.3-2.4c-0.2-0.4-0.3-0.8-0.4-1.2H12l0.2-0.8h0.7c0-0.2,0-0.4,0-0.6v-0.3H12l0.2-0.8H13 c0.2-1.3,1.1-2.4,2.3-2.9c0.8-0.4,1.6-0.6,2.5-0.5c0.8,0,1.5,0.1,2.2,0.5l-0.3,1.2C19.2,7.1,18.5,6.9,17.8,6.9L17.8,6.9z" />
                <path d="M30.7,10.5l-0.5-0.9l-1.9,1.1c-0.4-0.4-1-0.7-1.6-0.7c-1.2,0-2.2,1-2.2,2.2c0,0.5,0.2,1,0.4,1.3l-3.1,3.7 c-0.3-0.2-0.7-0.3-1.1-0.3c-1.2,0-2.2,1-2.2,2.2c0,0.4,0.1,0.7,0.2,1l-3,2.3c-0.4-0.3-0.9-0.5-1.4-0.5c-0.9,0-1.7,0.6-2.1,1.4 l-2.2-1c0-0.1,0-0.1,0-0.2C10,21,9,20,7.8,20c-1.2,0-2.2,1-2.2,2.2c0,0.2,0,0.3,0.1,0.5L3.7,24l0.6,0.8L6,23.6 c0.4,0.5,0.9,0.8,1.5,0.8V29H8v-4.5c0.7-0.1,1.3-0.5,1.7-1.1l2.3,1c0.1,1.1,0.9,1.9,2,2V29h0.5v-2.5c1.1-0.1,2-1.1,2-2.2 c0-0.3-0.1-0.6-0.2-0.9l3.1-2.3c0.3,0.3,0.7,0.4,1.1,0.5V29H21v-7.5c1.1-0.1,2-1.1,2-2.2c0-0.5-0.2-1-0.4-1.3l3.1-3.7 c0.2,0.1,0.5,0.2,0.8,0.3V29H27V14.5c1.1-0.1,2-1.1,2-2.2c0-0.3-0.1-0.5-0.1-0.7L30.7,10.5z" />
              </g>
            </svg>
          </span>
        </span>
      </span>
      <span
        class="
          font-size-xs
          font-weight-regular
          service-btn__text
          text-ap-grey-darken-1
        "
        id="service-btn-id-text"
      >
        relevé honoraires
      </span>
    </span>
    <!---->
    <!---->
  </button>
  <!-- v-if -->
</div>
`;
